--- a/exercise_4/exercise_4.html
+++ b/exercise_4/exercise_4.html
@@ -1,6 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-<div id="exercise4">
+<div id="computedAndWatch">
    
     <div>
         <p>Current Value: {{ value }}</p>
@@ -19,7 +19,7 @@
 
 new Vue({
 	
-    el : "#exercise4",
+    el : "#computedAndWatch",
     
     data : {
       value : 0,
