--- a/exercise_5/exercise_5.html
+++ b/exercise_5/exercise_5.html
@@ -1,6 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-<div id = "exercise5">
+<div id = "exercise_css">
   <div 
     @click = "attached = !attached" 
     :class =  "divClass" 
@@ -48,7 +48,7 @@
   
   new Vue({
 
-  el: "#exercise5",
+  el: "#exercise_css",
 
   data: {
     attached: false,
